Fix spacing around Add Tab button, improve drag and drop experience

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -457,8 +457,9 @@ input[type="text"]:focus {
 .action-buttons {
     display: flex;
     justify-content: flex-end;
-    padding-right: 8px;
-    margin-right: 8px;
+    padding: 0 8px 8px 0;
+    margin: 0 8px 8px 0;
+    
 }
 
 .reset-button {
